Framework/Base/Main/Error-Logs/Log_5-6-2021_21-37-58.txt
There was an uncaught exception error. The details can be found below.

C:\Users\jorda\Desktop\Bots\EpixBot\handlers\Music\Url-Parser\url-parser.js:15
            const duration = await mp3Duration(fullPath);
                             ^^^^^

SyntaxError: await is only valid in async function
    at wrapSafe (internal/modules/cjs/loader.js:979:16)
    at Module._compile (internal/modules/cjs/loader.js:1027:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1092:10)
    at Module.load (internal/modules/cjs/loader.js:928:32)
    at Function.Module._load (internal/modules/cjs/loader.js:769:14)
    at Module.require (internal/modules/cjs/loader.js:952:19)
    at require (internal/modules/cjs/helpers.js:88:18)
    at Object.<anonymous> (C:\Users\jorda\Desktop\Bots\EpixBot\handlers\Music\music.js:6:20)
    at Module._compile (internal/modules/cjs/loader.js:1063:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1092:10)